Bugfix, per EF: simplified results intro overlay text, and reduced opacity.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1737 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -153,12 +153,10 @@
 
         <div id="intro-overlay">
            <div class="number-of-species">
-                <h1><span class="number">33</span> species</h1>
-                in this subgroup
+                <h1><span class="number">33</span> possible matches</h1>
             </div>
             <div class="number-of-questions">
-                <h1><span class="number">35</span> questions</h1>
-                to narrow your search
+                <h1>Answer questions here</h1>
             </div>
             <div class="get-started">
                 <h1>Get started!</h1>
