Activate Plant of the Day on the home page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1755 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -9,7 +9,7 @@
                     <p><a href="http://www.newfs.org/">New England Wild
                         Flower Society</a><br>
                     180 Hemenway Road, Framingham, MA 01701</p>
-                </div><!--Closes .three-col-->
+                </div>
 
                 <div class="three-col">
                     <h6>Go Botany</h6>
@@ -22,7 +22,7 @@
                     <h6>Legal</h6>
                     <p><a href="#">Privacy Policy</a> |
                         <a href="#">Terms of Use</a></p>
-                </div><!--Closes .three-col-->
+                </div>
 
                 <div class="three-col last">
                     <img src="/static/images/layout/nsf-logo.png"
@@ -30,7 +30,7 @@
                     <p>The Go Botany project is supported in part by the 
                         National Science Foundation.<br><a href="www.nsf.gov">www.nsf.gov</a></p>
                     <div class="clearit"></div>
-                </div><!--Closes .three-col-->
+                </div>
 
-            </div><!--Closes .container-->
+            </div>
         </footer>
