--- a/gobotany/core/templates/_claro_css.html
+++ b/gobotany/core/templates/_claro_css.html
@@ -1,4 +1,4 @@
-<!-- TODO: obsolete our use of Dijit/Claro so this can be removed. -->
+{# TODO: obsolete our use of Dijit/Claro so this can be removed. #}
 <link rel="stylesheet"
       href="http://ajax.googleapis.com/ajax/libs/dojo/1.6.0/dijit/themes/claro/claro.css"
       type="text/css" media="screen" title="Dijit Claro Style">
