--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -1,5 +1,7 @@
 {% extends "simplekey/_new_base.html" %}
 
+{% load thumbnail %}
+
 {% block title %}Go Botany: New England Wild Flower Society{% endblock %}
 {% block title_suffix %}{% endblock %}
 
@@ -70,19 +72,25 @@
                 <div class="clearit"></div>
 
                 <div id="potd">
-                    <img src="/static/images/layout/potd-img1.jpg" 
-                        alt="Magnolia Virginiana" />
-                    <div class="details">
-                        <h4>Plant of the Day: 
-                            <span class="latin">Magnolia Virginiana</span> 
-                            <span class="english">Sweet Bay</span></h4>
-                        <p>Although it attains impressive sizes in the south,
-                        sweetbay magnolia is a medium-sized tree (20-60 feet
-                        or 10-20 meters tall) in southern New England. The
-                        leaves are lustrous green on top and white-hairy
-                        beneath, and often remain on the plant into early
-                        winter.</p>
-                        <a class="learn-more" href="#">Learn More</a>
+                    {% if plant_of_the_day %}
+                        {% thumbnail plant_of_the_day_image.image "270x111" crop="center" as im %}
+                        <a href="/species/{{ plant_of_the_day.genus_name|lower }}/{{ plant_of_the_day.epithet }}/"
+                            title="Learn more about {{ plant_of_the_day.scientific_name }}">
+                            <img src="{{ im.absolute_url }}"
+                                alt="{{ plant_of_the_day.scientific_name }}"
+                                height="111" width="270">
+                        </a>
+                        <div class="details">
+                            <h4>Plant of the Day:
+                                <span class="latin">{{ plant_of_the_day.scientific_name }}</span>
+                                <span class="english">{% for common_name in plant_of_the_day.common_names.all %}{% if not forloop.first %}, {% endif %}{{ common_name }}{% endfor %}</span>                           
+                            </h4>
+                            <p>{{ plant_of_the_day.factoid|truncatewords:"38" }}</p>
+                            <a class="learn-more" href="/species/{{ plant_of_the_day.genus_name|lower }}/{{ plant_of_the_day.epithet }}/">Learn More</a>
+                    {% else %}
+                        <p>Error: Plant of the Day information
+                        missing</p>
+                    {% endif %}
                     </div>
                     <div class="clearit"></div>
                 </div>
