--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -34,7 +34,7 @@
         {# such as SVGWeb. #}
         {% block js_top %}{% endblock %}
 
-        <!-- HTML5 Fix for IE -->
+        {# HTML5 fix for IE #}
         <!--[if lt IE 9]>
         <script
             src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
