--- a/gobotany/simplekey/templates/simplekey/genus.html
+++ b/gobotany/simplekey/templates/simplekey/genus.html
@@ -1,94 +1,88 @@
-{% extends "simplekey/_base.html" %}
+{% extends "simplekey/_new_base.html" %}
 {% load thumbnail %}
 {% load simplekey_extras %}
 
 {% block title %}
-Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}{% endblock %}
+Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
+{% endblock %}
 
-{% block body %}
-    <body id="genus" class="claro app genus">
-        {% include "simplekey/_header.html" %}
+{% block js_top %}
+    API_URL = '{% url api-base %}';
+    {# TODO: eventually move elsewhere #}
+    {% include "simplekey/partner_site_inline_js.html" %}
+{% endblock %}
 
-        <div class="content">
-            <div class="container">
-                <div id="main">
-                    <h2>Genus: <i>{{ genus.name }}</i></h2>
-                    {% if common_name %}<h3>{{ common_name }}</h3>{% endif %}
-                    <p class="description">
-                    {% if item.description %}
-                        {{ item.description }}
-                    {% else %}
-                        TO DO: Add description in the database.
-                        This is a placeholder description.
-                        (Test glossary highlighting here with a few terms,
-                        such as abaxial, berry, creeping, fruit and
-                        perennial.)
-                    {% endif %}
-                    </p>
+{% block js_require %}
+    define('args', [], {
+        genus_slug: '{{ genus.slug }}'
+    });
+    require(['simplekey/genus']);
+{% endblock %}
 
-                    <div class="pics">
-                        {% for drawing in genus_drawings %}
-                            <div>
-                                <a rel="shadowbox"
-                                    href="{{ drawing.image.url }}">
-                                    <img class="map"
-                                        src="{{ drawing.image.thumbnail.absolute_url }}"
-                                        alt="{{ drawing.alt }}"></a>
-                                <p>{{ drawing.alt }}</p>
-                                <a class="enlarge" rel="shadowbox"
-                                    href="{{ drawing.image.url }}">
-                                    <img class="zoom"
-                                    src="/static/images/icons/zoom.png"
-                                    alt="enlarge"></a>
-                            </div>
-                        {% endfor %}
-                    </div>
+{% block body_attributes %}id="genus" class="claro app genus"{% endblock %}
 
-                    <h4>Family</h4>
-                    <p class="family">
-                        <a href="{% url simplekey-family genus.family.slug %}"
-                        >{{ genus.family.name }}{% if genus.family.common_name %} ({{ genus.family.common_name }}){% endif %}</a></p>
+{% block body_content %}
+    {% include "simplekey/_header.html" %}
 
-                    <h4>This Genus&#8217;s Species:</h4>
-                    <ul class="species">
-                    {% for species in genus.taxa.all %}
-                        <li><i><a href="{% url simplekey-species species.genus.slug species.epithet %}"
-                        >{{ species.scientific_name }}</a></i></li>
+    <div class="content">
+        <div class="container">
+            <div id="main">
+                <h2>Genus: <i>{{ genus.name }}</i></h2>
+                {% if common_name %}<h3>{{ common_name }}</h3>{% endif %}
+                <p class="description">
+                {% if item.description %}
+                    {{ item.description }}
+                {% else %}
+                    TO DO: Add description in the database.
+                    This is a placeholder description.
+                    (Test glossary highlighting here with a few terms,
+                    such as abaxial, berry, creeping, fruit and
+                    perennial.)
+                {% endif %}
+                </p>
+
+                <div class="pics">
+                    {% for drawing in genus_drawings %}
+                        <div>
+                            <a rel="shadowbox"
+                                href="{{ drawing.image.url }}">
+                                <img class="map"
+                                    src="{{ drawing.image.thumbnail.absolute_url }}"
+                                    alt="{{ drawing.alt }}"></a>
+                            <p>{{ drawing.alt }}</p>
+                            <a class="enlarge" rel="shadowbox"
+                                href="{{ drawing.image.url }}">
+                                <img class="zoom"
+                                src="/static/images/icons/zoom.png"
+                                alt="enlarge"></a>
+                        </div>
                     {% endfor %}
-                    </ul>
-
-                    {# TODO: need genus-species button, like family-genera button #}
-                    <a class="genus-species-btn"
-                        href="{% url simplekey-pile pilegroup.slug pile.slug %}#genus={{ genus.name }}">Key
-                        to this Genus&#8217;s Species</a>
-
                 </div>
-                <div id="sidebar" style="height: 634px;">
-                    {% include "simplekey/_sidebar_items.html" %}
-                </div>
-                <div class="clearit"></div>
+
+                <h4>Family</h4>
+                <p class="family">
+                    <a href="{% url simplekey-family genus.family.slug %}"
+                    >{{ genus.family.name }}{% if genus.family.common_name %} ({{ genus.family.common_name }}){% endif %}</a></p>
+
+                <h4>This Genus&#8217;s Species:</h4>
+                <ul class="species">
+                {% for species in genus.taxa.all %}
+                    <li><i><a href="{% url simplekey-species species.genus.slug species.epithet %}"
+                    >{{ species.scientific_name }}</a></i></li>
+                {% endfor %}
+                </ul>
+
+                {# TODO: need genus-species button, like family-genera button #}
+                <a class="genus-species-btn"
+                    href="{% url simplekey-pile pilegroup.slug pile.slug %}#genus={{ genus.name }}">Key
+                    to this Genus&#8217;s Species</a>
+
             </div>
+            <div id="sidebar" style="height: 634px;">
+                {% include "simplekey/_sidebar_items.html" %}
+            </div>
+            <div class="clearit"></div>
         </div>
-
-        {% include "simplekey/_footer.html" %}
-
-        {% include "simplekey/_script_constants.html" %}
-
-        <script>
-            {% include "simplekey/partner_site_inline_js.html" %}
-        </script>
-        
-        {% block js_bottom %}
-        <script>
-        API_URL = '{% url api-base %}';
-        dojo.require('gobotany.sk.genus');
-        dojo.addOnLoad(function() {
-            gobotany.sk.genus.init('{{ genus.slug }}');
-        });
-        </script>
-        {% endblock %}
-
-
-    </body>
+    </div>
 {% endblock %}
 
