--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -2,8 +2,7 @@
 
 {% block pagetitle %}Getting Started{% endblock %}
 
-{% block body_id %}getting-started{% endblock %}
-{% block body_class %}getting-started{% endblock %}
+{% block body_attributes %}id="getting-started" class="claro app getting-started"{% endblock %}
 
 {% block main_content %}			
     <a class="onward-btn"
