--- a/gobotany/simplekey/templates/simplekey/help_video.html
+++ b/gobotany/simplekey/templates/simplekey/help_video.html
@@ -2,8 +2,7 @@
 
 {% block pagetitle %}Video Help Topics{% endblock %}
 
-{% block body_id %}video-help-topics{% endblock %}
-{% block body_class %}video-help-topics{% endblock %}
+{% block body_attributes %}id="video-help-topics" class="claro app video-help-topics"{% endblock %}
 
 {% block main_content %}
     <h2>Video Help Topics</h2>
