Add and set a default order for pile and pile group images. Allow changing the order in the Admin.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1768 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -28,47 +28,48 @@
 
                 <div class="clearit"></div>
 
-                {% for pilegroup, url in pilegroups_and_urls %}
-                <div class="list-item{% if forloop.last %} last{% endif %}">
-                    <div class="img-gallery">
-                        <div class="frame"></div>
-                        <div class="img-container">
-                            <div class="images">
-                                {% for i in pilegroup.sample_species_images.all %}
-                                    {% with i.creator as photographer %}
-                                    <a href="{{ i.image.url }}"
-                                        rel="shadowbox[{{ pilegroup.slug }}]"
-                                        title="{% photo_title_credit i.image_type i.content_object.scientific_name photographer %}">
-                                        <img src="{{ i.image.extra_thumbnails.large.absolute_url }}"
-                                            alt="{% photo_title_credit i.image_type i.content_object.scientific_name photographer %}">
-                                    </a>
-                                    {% endwith %}
-
-                                {% endfor %}
+                {% for pilegroup, pilegroup_images, pilegroup_url in pilegroups %}
+                    <div class="list-item{% if forloop.last %} last{% endif %}">
+                        <div class="img-gallery">
+                            <div class="frame"></div>
+                            <div class="img-container">
+                                <div class="images">
+                                    {% for pilegroup_image in pilegroup_images %}
+                                        {% with pilegroup_image.content_image as i %}
+                                            {% with i.creator as photographer %}
+                                            <a href="{{ i.image.url }}"
+                                                rel="shadowbox[{{ pilegroup.slug }}]"
+                                                title="{% photo_title_credit i.image_type i.content_object.scientific_name photographer %}">
+                                                <img src="{{ i.image.extra_thumbnails.large.absolute_url }}"
+                                                    alt="{% photo_title_credit i.image_type i.content_object.scientific_name photographer %}">
+                                            </a>
+                                            {% endwith %}
+                                        {% endwith %}
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            <div class="controls">
+                                <a class="prev">Prev</a>
+                                <a class="next">Next</a>
                             </div>
                         </div>
-                        <div class="controls">
-                            <a class="prev">Prev</a>
-                            <a class="next">Next</a>
+                        <div class="details">
+                            <h3>{{ pilegroup.friendly_title|lower|capfirst }} <span>{{ pilegroup.friendly_name|capfirst }}</span></h3>
+                            <p class="key-char">
+                                <span class="section-title">Key Characteristics</span>
+                                {{ pilegroup.key_characteristics|removetags:"div"|safe|capfirst }}
+                            </p>
+                            <p class="exceptions">
+                                <span class="section-title">Exceptions</span>
+                                {{ pilegroup.notable_exceptions|removetags:"div"|safe|capfirst }}
+                            </p>
+                            <p class="vid">
+                                <a href="http://www.youtube.com/v/{{ pilegroup.youtube_id }}" rel="shadowbox;height=380;width=640;">View a short video about this plant group</a>
+                            </p>
+                            <a class="plant-in-group" href="{{ pilegroup_url }}">My plant is in this group</a>
                         </div>
+                        <div class="clearit"></div>
                     </div>
-                    <div class="details">
-                        <h3>{{ pilegroup.friendly_title|lower|capfirst }} <span>{{ pilegroup.friendly_name|capfirst }}</span></h3>
-                        <p class="key-char">
-                            <span class="section-title">Key Characteristics</span>
-                            {{ pilegroup.key_characteristics|removetags:"div"|safe|capfirst }}
-                        </p>
-                        <p class="exceptions">
-                            <span class="section-title">Exceptions</span>
-                            {{ pilegroup.notable_exceptions|removetags:"div"|safe|capfirst }}
-                        </p>
-                        <p class="vid">
-                            <a href="http://www.youtube.com/v/{{ pilegroup.youtube_id }}" rel="shadowbox;height=380;width=640;">View a short video about this plant group</a>
-                        </p>
-                        <a class="plant-in-group" href="{{ url }}">My plant is in this group</a>
-                    </div>
-                    <div class="clearit"></div>
-                </div>
                 {% endfor %}
 
             </div>
