Improve video link text on the group and subgroup pages.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1771 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -64,7 +64,7 @@
                                 {{ pilegroup.notable_exceptions|removetags:"div"|safe|capfirst }}
                             </p>
                             <p class="vid">
-                                <a href="http://www.youtube.com/v/{{ pilegroup.youtube_id }}" rel="shadowbox;height=380;width=640;">View a short video about this plant group</a>
+                                <a href="http://www.youtube.com/v/{{ pilegroup.youtube_id }}" rel="shadowbox;height=380;width=640;">View a short video about this group</a>
                             </p>
                             <a class="plant-in-group" href="{{ pilegroup_url }}">My plant is in this group</a>
                         </div>
