--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -65,7 +65,9 @@
                                 {{ pile.notable_exceptions|removetags:"div ul li"|safe }}
                             </p>
                             <p class="vid">
-                                <a href="http://www.youtube.com/v/{{ pile.youtube_id }}" rel="shadowbox;height=380;width=640;">View a short video about this plant group</a>
+                                <a href="http://www.youtube.com/v/{{ pile.youtube_id }}"
+                                    rel="shadowbox;height=380;width=640;">View
+                                    a short video about this subgroup</a>
                             </p>
                             <a class="plant-in-subgroup" href="{{ pile_url }}">My plant is in this subgroup</a>
                         </div>
